--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,5 @@ test:
 production:
   adapter: postgresql
   database: aracari
-  username:
-  password:
-  host: localhost
+  pool:     5
+  timeout:  5000
